2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/env.h (grub_env_find): Remove prototype.
	* grub-core/kern/env.c (grub_env_find): Make static.
	(grub_env_set): Remove useless set.

2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/realmode.S: Remove useless align.

2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/dl.h (grub_dl_load_file): Don't export.

2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (grub_diskfilter_open): Remove useless
	grub_dprintf.

2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/dmraid_nvidia.c (grub_dmraid_nv_detect): Remove useless
	grub_errors.
	* grub-core/disk/mdraid1x_linux.c (grub_mdraid_detect): Simplify by
	not reloading whole superblock but only the part which is really needed.
	Remove useless grub_errors.
	* grub-core/disk/mdraid_linux.c (grub_mdraid_detect): Remove useless
	grub_errors.

2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't export grub_get_rtc.

	* include/grub/i386/pc/time.h (grub_get_rtc): Don't export.
	* grub-core/commands/i386/pc/play.c (play): Use grub_get_time_ms.

2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/genmod.sh.in: Add -R .note.GNU-stack to strip.

2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (insert_array): Remove scanner_name
	argument since it can be deduced from diskfilter. All users updated.

2012-02-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove prio_list.

	* include/grub/list.h (grub_prio_list): Removed.
	(GRUB_PRIO_LIST_PRIO_MASK): Removed. All users switched to
	GRUB_COMMAND_PRIO_MASK.
	(GRUB_PRIO_LIST_FLAG_ACTIVE): Removed. All users switched to
	GRUB_COMMAND_FLAG_ACTIVE.
	(grub_prio_list_insert): Removed.
	(grub_prio_list_remove): Likewise.
	(GRUB_AS_PRIO_LIST): Likewise.
	(GRUB_AS_PRIO_LIST_P): Likewise.
	* include/grub/command.h (GRUB_COMMAND_PRIO_MASK): New define.